# dc_error

./: CMakeLists-new.txt  CMakeLists.txt  README.md
docs/: CMakeLists.txt
include/dc_error/: check.h  error.h
src/: CMakeLists.txt  check.c  error.c
tests/: CMakeLists.txt  tests.h
